2.Code/ctvb.output
State 81 conflicts: 2 shift/reduce
State 203 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression INC_OP
   10                   | postfix_expression DEC_OP

   11 argument_expression_list: assignment_expression
   12                         | argument_expression_list ',' assignment_expression

   13 unary_expression: postfix_expression
   14                 | INC_OP unary_expression
   15                 | DEC_OP unary_expression
   16                 | unary_operator cast_expression
   17                 | SIZEOF unary_expression

   18 unary_operator: '&'
   19               | '*'
   20               | '+'
   21               | '-'
   22               | '~'
   23               | '!'

   24 cast_expression: unary_expression

   25 multiplicative_expression: cast_expression
   26                          | multiplicative_expression '*' cast_expression
   27                          | multiplicative_expression '/' cast_expression
   28                          | multiplicative_expression '%' cast_expression

   29 additive_expression: multiplicative_expression
   30                    | additive_expression '+' multiplicative_expression
   31                    | additive_expression '-' multiplicative_expression

   32 shift_expression: additive_expression

   33 relational_expression: shift_expression
   34                      | relational_expression '<' shift_expression
   35                      | relational_expression '>' shift_expression
   36                      | relational_expression LE_OP shift_expression
   37                      | relational_expression GE_OP shift_expression

   38 equality_expression: relational_expression
   39                    | equality_expression EQ_OP relational_expression
   40                    | equality_expression NE_OP relational_expression

   41 and_expression: equality_expression
   42               | and_expression '&' equality_expression

   43 exclusive_or_expression: and_expression
   44                        | exclusive_or_expression '^' and_expression

   45 inclusive_or_expression: exclusive_or_expression
   46                        | inclusive_or_expression '|' exclusive_or_expression

   47 logical_and_expression: inclusive_or_expression
   48                       | logical_and_expression AND_OP inclusive_or_expression

   49 logical_or_expression: logical_and_expression
   50                      | logical_or_expression OR_OP logical_and_expression

   51 conditional_expression: logical_or_expression
   52                       | logical_or_expression '?' expression ':' conditional_expression

   53 assignment_expression: conditional_expression
   54                      | unary_expression assignment_operator assignment_expression

   55 assignment_operator: '='
   56                    | MUL_ASSIGN
   57                    | DIV_ASSIGN
   58                    | MOD_ASSIGN
   59                    | ADD_ASSIGN
   60                    | SUB_ASSIGN
   61                    | LEFT_ASSIGN
   62                    | RIGHT_ASSIGN
   63                    | AND_ASSIGN
   64                    | XOR_ASSIGN
   65                    | OR_ASSIGN

   66 expression: assignment_expression
   67           | expression ',' assignment_expression

   68 declaration: declaration_specifiers ';'
   69            | declaration_specifiers init_declarator_list ';'

   70 declaration_specifiers: type_specifier
   71                       | type_specifier declaration_specifiers
   72                       | type_qualifier
   73                       | type_qualifier declaration_specifiers

   74 init_declarator_list: init_declarator
   75                     | init_declarator_list ',' init_declarator

   76 init_declarator: declarator
   77                | declarator '=' initializer

   78 type_specifier: VOID
   79               | CHAR
   80               | SHORT
   81               | INT
   82               | LONG
   83               | FLOAT
   84               | DOUBLE
   85               | SIGNED
   86               | UNSIGNED

   87 type_qualifier: CONST

   88 declarator: direct_declarator

   89 direct_declarator: IDENTIFIER
   90                  | '(' declarator ')'
   91                  | direct_declarator '[' ']'
   92                  | direct_declarator '(' identifier_list ')'
   93                  | direct_declarator '(' ')'

   94 identifier_list: IDENTIFIER
   95                | identifier_list ',' IDENTIFIER

   96 initializer: assignment_expression
   97            | '{' initializer_list '}'
   98            | '{' initializer_list ',' '}'

   99 initializer_list: initializer
  100                 | initializer_list ',' initializer

  101 statement: compound_statement
  102          | expression_statement
  103          | selection_statement
  104          | iteration_statement
  105          | jump_statement
  106          | one_statement

  107 one_statement: type_specifier direct_declarator ';'

  108 compound_statement: '{' '}'
  109                   | '{' statement_list '}'
  110                   | '{' declaration_list '}'
  111                   | '{' declaration_list statement_list '}'
  112                   | '{' statement_list declaration_list '}'

  113 declaration_list: declaration
  114                 | declaration_list declaration

  115 statement_list: statement
  116               | statement_list statement

  117 expression_statement: ';'
  118                     | expression ';'

  119 selection_statement: IF '(' expression ')' statement
  120                    | IF '(' expression ')' statement ELSE statement

  121 iteration_statement: WHILE '(' expression ')' statement
  122                    | FOR '(' expression_statement expression_statement ')' statement
  123                    | FOR '(' expression_statement expression_statement expression ')' statement

  124 jump_statement: RETURN ';'
  125               | RETURN expression ';'

  126 translation_unit: external_declaration
  127                 | translation_unit external_declaration

  128 external_declaration: function_definition
  129                     | declaration

  130 function_definition: declaration_specifiers declarator declaration_list compound_statement
  131                    | declaration_specifiers declarator compound_statement
  132                    | declarator declaration_list compound_statement
  133                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 23
'%' (37) 28
'&' (38) 18 42
'(' (40) 4 7 8 90 92 93 119 120 121 122 123
')' (41) 4 7 8 90 92 93 119 120 121 122 123
'*' (42) 19 26
'+' (43) 20 30
',' (44) 12 67 75 95 98 100
'-' (45) 21 31
'/' (47) 27
':' (58) 52
';' (59) 68 69 107 117 118 124 125
'<' (60) 34
'=' (61) 55 77
'>' (62) 35
'?' (63) 52
'[' (91) 6 91
']' (93) 6 91
'^' (94) 44
'{' (123) 97 98 108 109 110 111 112
'|' (124) 46
'}' (125) 97 98 108 109 110 111 112
'~' (126) 22
error (256)
IDENTIFIER (258) 1 89 94 95
CONSTANT (259) 2
STRING_LITERAL (260) 3
SIZEOF (261) 17
INC_OP (262) 9 14
DEC_OP (263) 10 15
LE_OP (264) 36
GE_OP (265) 37
EQ_OP (266) 39
NE_OP (267) 40
AND_OP (268) 48
OR_OP (269) 50
MUL_ASSIGN (270) 56
DIV_ASSIGN (271) 57
MOD_ASSIGN (272) 58
ADD_ASSIGN (273) 59
SUB_ASSIGN (274) 60
LEFT_ASSIGN (275) 61
RIGHT_ASSIGN (276) 62
AND_ASSIGN (277) 63
XOR_ASSIGN (278) 64
OR_ASSIGN (279) 65
CHAR (280) 79
SHORT (281) 80
INT (282) 81
LONG (283) 82
SIGNED (284) 85
UNSIGNED (285) 86
FLOAT (286) 83
DOUBLE (287) 84
CONST (288) 87
VOID (289) 78
IF (290) 119 120
ELSE (291) 120
WHILE (292) 121
FOR (293) 122 123
RETURN (294) 124 125


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
primary_expression (64)
    on left: 1 2 3 4, on right: 5
postfix_expression (65)
    on left: 5 6 7 8 9 10, on right: 6 7 8 9 10 13
argument_expression_list (66)
    on left: 11 12, on right: 8 12
unary_expression (67)
    on left: 13 14 15 16 17, on right: 14 15 17 24 54
unary_operator (68)
    on left: 18 19 20 21 22 23, on right: 16
cast_expression (69)
    on left: 24, on right: 16 25 26 27 28
multiplicative_expression (70)
    on left: 25 26 27 28, on right: 26 27 28 29 30 31
additive_expression (71)
    on left: 29 30 31, on right: 30 31 32
shift_expression (72)
    on left: 32, on right: 33 34 35 36 37
relational_expression (73)
    on left: 33 34 35 36 37, on right: 34 35 36 37 38 39 40
equality_expression (74)
    on left: 38 39 40, on right: 39 40 41 42
and_expression (75)
    on left: 41 42, on right: 42 43 44
exclusive_or_expression (76)
    on left: 43 44, on right: 44 45 46
inclusive_or_expression (77)
    on left: 45 46, on right: 46 47 48
logical_and_expression (78)
    on left: 47 48, on right: 48 49 50
logical_or_expression (79)
    on left: 49 50, on right: 50 51 52
conditional_expression (80)
    on left: 51 52, on right: 52 53
assignment_expression (81)
    on left: 53 54, on right: 11 12 54 66 67 96
assignment_operator (82)
    on left: 55 56 57 58 59 60 61 62 63 64 65, on right: 54
expression (83)
    on left: 66 67, on right: 4 6 52 67 118 119 120 121 123 125
declaration (84)
    on left: 68 69, on right: 113 114 129
declaration_specifiers (85)
    on left: 70 71 72 73, on right: 68 69 71 73 130 131
init_declarator_list (86)
    on left: 74 75, on right: 69 75
init_declarator (87)
    on left: 76 77, on right: 74 75
type_specifier (88)
    on left: 78 79 80 81 82 83 84 85 86, on right: 70 71 107
type_qualifier (89)
    on left: 87, on right: 72 73
declarator (90)
    on left: 88, on right: 76 77 90 130 131 132 133
direct_declarator (91)
    on left: 89 90 91 92 93, on right: 88 91 92 93 107
identifier_list (92)
    on left: 94 95, on right: 92 95
initializer (93)
    on left: 96 97 98, on right: 77 99 100
initializer_list (94)
    on left: 99 100, on right: 97 98 100
statement (95)
    on left: 101 102 103 104 105 106, on right: 115 116 119 120 121
    122 123
one_statement (96)
    on left: 107, on right: 106
compound_statement (97)
    on left: 108 109 110 111 112, on right: 101 130 131 132 133
declaration_list (98)
    on left: 113 114, on right: 110 111 112 114 130 132
statement_list (99)
    on left: 115 116, on right: 109 111 112 116
expression_statement (100)
    on left: 117 118, on right: 102 122 123
selection_statement (101)
    on left: 119 120, on right: 103
iteration_statement (102)
    on left: 121 122 123, on right: 104
jump_statement (103)
    on left: 124 125, on right: 105
translation_unit (104)
    on left: 126 127, on right: 0 127
external_declaration (105)
    on left: 128 129, on right: 126 127
function_definition (106)
    on left: 130 131 132 133, on right: 128


state 0

    0 $accept: . translation_unit $end

    '('         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    CHAR        shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    SIGNED      shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    CONST       shift, and go to state 11
    VOID        shift, and go to state 12

    declaration             go to state 13
    declaration_specifiers  go to state 14
    type_specifier          go to state 15
    type_qualifier          go to state 16
    declarator              go to state 17
    direct_declarator       go to state 18
    translation_unit        go to state 19
    external_declaration    go to state 20
    function_definition     go to state 21


state 1

   90 direct_declarator: '(' . declarator ')'

    '('         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2

    declarator         go to state 22
    direct_declarator  go to state 18


state 2

   89 direct_declarator: IDENTIFIER .

    $default  reduce using rule 89 (direct_declarator)


state 3

   79 type_specifier: CHAR .

    $default  reduce using rule 79 (type_specifier)


state 4

   80 type_specifier: SHORT .

    $default  reduce using rule 80 (type_specifier)


state 5

   81 type_specifier: INT .

    $default  reduce using rule 81 (type_specifier)


state 6

   82 type_specifier: LONG .

    $default  reduce using rule 82 (type_specifier)


state 7

   85 type_specifier: SIGNED .

    $default  reduce using rule 85 (type_specifier)


state 8

   86 type_specifier: UNSIGNED .

    $default  reduce using rule 86 (type_specifier)


state 9

   83 type_specifier: FLOAT .

    $default  reduce using rule 83 (type_specifier)


state 10

   84 type_specifier: DOUBLE .

    $default  reduce using rule 84 (type_specifier)


state 11

   87 type_qualifier: CONST .

    $default  reduce using rule 87 (type_qualifier)


state 12

   78 type_specifier: VOID .

    $default  reduce using rule 78 (type_specifier)


state 13

  129 external_declaration: declaration .

    $default  reduce using rule 129 (external_declaration)


state 14

   68 declaration: declaration_specifiers . ';'
   69            | declaration_specifiers . init_declarator_list ';'
  130 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  131                    | declaration_specifiers . declarator compound_statement

    '('         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    ';'         shift, and go to state 23

    init_declarator_list  go to state 24
    init_declarator       go to state 25
    declarator            go to state 26
    direct_declarator     go to state 18


state 15

   70 declaration_specifiers: type_specifier .
   71                       | type_specifier . declaration_specifiers

    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    CONST     shift, and go to state 11
    VOID      shift, and go to state 12

    $default  reduce using rule 70 (declaration_specifiers)

    declaration_specifiers  go to state 27
    type_specifier          go to state 15
    type_qualifier          go to state 16


state 16

   72 declaration_specifiers: type_qualifier .
   73                       | type_qualifier . declaration_specifiers

    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    CONST     shift, and go to state 11
    VOID      shift, and go to state 12

    $default  reduce using rule 72 (declaration_specifiers)

    declaration_specifiers  go to state 28
    type_specifier          go to state 15
    type_qualifier          go to state 16


state 17

  132 function_definition: declarator . declaration_list compound_statement
  133                    | declarator . compound_statement

    '{'       shift, and go to state 29
    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    CONST     shift, and go to state 11
    VOID      shift, and go to state 12

    declaration             go to state 30
    declaration_specifiers  go to state 31
    type_specifier          go to state 15
    type_qualifier          go to state 16
    compound_statement      go to state 32
    declaration_list        go to state 33


state 18

   88 declarator: direct_declarator .
   91 direct_declarator: direct_declarator . '[' ']'
   92                  | direct_declarator . '(' identifier_list ')'
   93                  | direct_declarator . '(' ')'

    '('  shift, and go to state 34
    '['  shift, and go to state 35

    $default  reduce using rule 88 (declarator)


state 19

    0 $accept: translation_unit . $end
  127 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 36
    '('         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    CHAR        shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    SIGNED      shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    CONST       shift, and go to state 11
    VOID        shift, and go to state 12

    declaration             go to state 13
    declaration_specifiers  go to state 14
    type_specifier          go to state 15
    type_qualifier          go to state 16
    declarator              go to state 17
    direct_declarator       go to state 18
    external_declaration    go to state 37
    function_definition     go to state 21


state 20

  126 translation_unit: external_declaration .

    $default  reduce using rule 126 (translation_unit)


state 21

  128 external_declaration: function_definition .

    $default  reduce using rule 128 (external_declaration)


state 22

   90 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 38


state 23

   68 declaration: declaration_specifiers ';' .

    $default  reduce using rule 68 (declaration)


state 24

   69 declaration: declaration_specifiers init_declarator_list . ';'
   75 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 39
    ';'  shift, and go to state 40


state 25

   74 init_declarator_list: init_declarator .

    $default  reduce using rule 74 (init_declarator_list)


state 26

   76 init_declarator: declarator .
   77                | declarator . '=' initializer
  130 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  131                    | declaration_specifiers declarator . compound_statement

    '='       shift, and go to state 41
    '{'       shift, and go to state 29
    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    CONST     shift, and go to state 11
    VOID      shift, and go to state 12

    $default  reduce using rule 76 (init_declarator)

    declaration             go to state 30
    declaration_specifiers  go to state 31
    type_specifier          go to state 15
    type_qualifier          go to state 16
    compound_statement      go to state 42
    declaration_list        go to state 43


state 27

   71 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 71 (declaration_specifiers)


state 28

   73 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 73 (declaration_specifiers)


state 29

  108 compound_statement: '{' . '}'
  109                   | '{' . statement_list '}'
  110                   | '{' . declaration_list '}'
  111                   | '{' . declaration_list statement_list '}'
  112                   | '{' . statement_list declaration_list '}'

    '('             shift, and go to state 44
    '{'             shift, and go to state 29
    '}'             shift, and go to state 45
    IDENTIFIER      shift, and go to state 46
    CONSTANT        shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    SIZEOF          shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    CHAR            shift, and go to state 3
    SHORT           shift, and go to state 4
    INT             shift, and go to state 5
    LONG            shift, and go to state 6
    SIGNED          shift, and go to state 7
    UNSIGNED        shift, and go to state 8
    FLOAT           shift, and go to state 9
    DOUBLE          shift, and go to state 10
    CONST           shift, and go to state 11
    VOID            shift, and go to state 12
    IF              shift, and go to state 52
    WHILE           shift, and go to state 53
    FOR             shift, and go to state 54
    RETURN          shift, and go to state 55
    '&'             shift, and go to state 56
    '*'             shift, and go to state 57
    '+'             shift, and go to state 58
    '-'             shift, and go to state 59
    '~'             shift, and go to state 60
    '!'             shift, and go to state 61
    ';'             shift, and go to state 62

    primary_expression         go to state 63
    postfix_expression         go to state 64
    unary_expression           go to state 65
    unary_operator             go to state 66
    cast_expression            go to state 67
    multiplicative_expression  go to state 68
    additive_expression        go to state 69
    shift_expression           go to state 70
    relational_expression      go to state 71
    equality_expression        go to state 72
    and_expression             go to state 73
    exclusive_or_expression    go to state 74
    inclusive_or_expression    go to state 75
    logical_and_expression     go to state 76
    logical_or_expression      go to state 77
    conditional_expression     go to state 78
    assignment_expression      go to state 79
    expression                 go to state 80
    declaration                go to state 30
    declaration_specifiers     go to state 31
    type_specifier             go to state 81
    type_qualifier             go to state 16
    statement                  go to state 82
    one_statement              go to state 83
    compound_statement         go to state 84
    declaration_list           go to state 85
    statement_list             go to state 86
    expression_statement       go to state 87
    selection_statement        go to state 88
    iteration_statement        go to state 89
    jump_statement             go to state 90


state 30

  113 declaration_list: declaration .

    $default  reduce using rule 113 (declaration_list)


state 31

   68 declaration: declaration_specifiers . ';'
   69            | declaration_specifiers . init_declarator_list ';'

    '('         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    ';'         shift, and go to state 23

    init_declarator_list  go to state 24
    init_declarator       go to state 25
    declarator            go to state 91
    direct_declarator     go to state 18


state 32

  133 function_definition: declarator compound_statement .

    $default  reduce using rule 133 (function_definition)


state 33

  114 declaration_list: declaration_list . declaration
  132 function_definition: declarator declaration_list . compound_statement

    '{'       shift, and go to state 29
    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    CONST     shift, and go to state 11
    VOID      shift, and go to state 12

    declaration             go to state 92
    declaration_specifiers  go to state 31
    type_specifier          go to state 15
    type_qualifier          go to state 16
    compound_statement      go to state 93


state 34

   92 direct_declarator: direct_declarator '(' . identifier_list ')'
   93                  | direct_declarator '(' . ')'

    ')'         shift, and go to state 94
    IDENTIFIER  shift, and go to state 95

    identifier_list  go to state 96


state 35

   91 direct_declarator: direct_declarator '[' . ']'

    ']'  shift, and go to state 97


state 36

    0 $accept: translation_unit $end .

    $default  accept


state 37

  127 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 127 (translation_unit)


state 38

   90 direct_declarator: '(' declarator ')' .

    $default  reduce using rule 90 (direct_declarator)


state 39

   75 init_declarator_list: init_declarator_list ',' . init_declarator

    '('         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2

    init_declarator    go to state 98
    declarator         go to state 91
    direct_declarator  go to state 18


state 40

   69 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 69 (declaration)


state 41

   77 init_declarator: declarator '=' . initializer

    '('             shift, and go to state 44
    '{'             shift, and go to state 99
    IDENTIFIER      shift, and go to state 46
    CONSTANT        shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    SIZEOF          shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    '&'             shift, and go to state 56
    '*'             shift, and go to state 57
    '+'             shift, and go to state 58
    '-'             shift, and go to state 59
    '~'             shift, and go to state 60
    '!'             shift, and go to state 61

    primary_expression         go to state 63
    postfix_expression         go to state 64
    unary_expression           go to state 65
    unary_operator             go to state 66
    cast_expression            go to state 67
    multiplicative_expression  go to state 68
    additive_expression        go to state 69
    shift_expression           go to state 70
    relational_expression      go to state 71
    equality_expression        go to state 72
    and_expression             go to state 73
    exclusive_or_expression    go to state 74
    inclusive_or_expression    go to state 75
    logical_and_expression     go to state 76
    logical_or_expression      go to state 77
    conditional_expression     go to state 78
    assignment_expression      go to state 100
    initializer                go to state 101


state 42

  131 function_definition: declaration_specifiers declarator compound_statement .

    $default  reduce using rule 131 (function_definition)


state 43

  114 declaration_list: declaration_list . declaration
  130 function_definition: declaration_specifiers declarator declaration_list . compound_statement

    '{'       shift, and go to state 29
    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    CONST     shift, and go to state 11
    VOID      shift, and go to state 12

    declaration             go to state 92
    declaration_specifiers  go to state 31
    type_specifier          go to state 15
    type_qualifier          go to state 16
    compound_statement      go to state 102


state 44

    4 primary_expression: '(' . expression ')'

    '('             shift, and go to state 44
    IDENTIFIER      shift, and go to state 46
    CONSTANT        shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    SIZEOF          shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    '&'             shift, and go to state 56
    '*'             shift, and go to state 57
    '+'             shift, and go to state 58
    '-'             shift, and go to state 59
    '~'             shift, and go to state 60
    '!'             shift, and go to state 61

    primary_expression         go to state 63
    postfix_expression         go to state 64
    unary_expression           go to state 65
    unary_operator             go to state 66
    cast_expression            go to state 67
    multiplicative_expression  go to state 68
    additive_expression        go to state 69
    shift_expression           go to state 70
    relational_expression      go to state 71
    equality_expression        go to state 72
    and_expression             go to state 73
    exclusive_or_expression    go to state 74
    inclusive_or_expression    go to state 75
    logical_and_expression     go to state 76
    logical_or_expression      go to state 77
    conditional_expression     go to state 78
    assignment_expression      go to state 79
    expression                 go to state 103


state 45

  108 compound_statement: '{' '}' .

    $default  reduce using rule 108 (compound_statement)


state 46

    1 primary_expression: IDENTIFIER .

    $default  reduce using rule 1 (primary_expression)


state 47

    2 primary_expression: CONSTANT .

    $default  reduce using rule 2 (primary_expression)


state 48

    3 primary_expression: STRING_LITERAL .

    $default  reduce using rule 3 (primary_expression)


state 49

   17 unary_expression: SIZEOF . unary_expression

    '('             shift, and go to state 44
    IDENTIFIER      shift, and go to state 46
    CONSTANT        shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    SIZEOF          shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    '&'             shift, and go to state 56
    '*'             shift, and go to state 57
    '+'             shift, and go to state 58
    '-'             shift, and go to state 59
    '~'             shift, and go to state 60
    '!'             shift, and go to state 61

    primary_expression  go to state 63
    postfix_expression  go to state 64
    unary_expression    go to state 104
    unary_operator      go to state 66


state 50

   14 unary_expression: INC_OP . unary_expression

    '('             shift, and go to state 44
    IDENTIFIER      shift, and go to state 46
    CONSTANT        shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    SIZEOF          shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    '&'             shift, and go to state 56
    '*'             shift, and go to state 57
    '+'             shift, and go to state 58
    '-'             shift, and go to state 59
    '~'             shift, and go to state 60
    '!'             shift, and go to state 61

    primary_expression  go to state 63
    postfix_expression  go to state 64
    unary_expression    go to state 105
    unary_operator      go to state 66


state 51

   15 unary_expression: DEC_OP . unary_expression

    '('             shift, and go to state 44
    IDENTIFIER      shift, and go to state 46
    CONSTANT        shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    SIZEOF          shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    '&'             shift, and go to state 56
    '*'             shift, and go to state 57
    '+'             shift, and go to state 58
    '-'             shift, and go to state 59
    '~'             shift, and go to state 60
    '!'             shift, and go to state 61

    primary_expression  go to state 63
    postfix_expression  go to state 64
    unary_expression    go to state 106
    unary_operator      go to state 66


state 52

  119 selection_statement: IF . '(' expression ')' statement
  120                    | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 107


state 53

  121 iteration_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 108


state 54

  122 iteration_statement: FOR . '(' expression_statement expression_statement ')' statement
  123                    | FOR . '(' expression_statement expression_statement expression ')' statement

    '('  shift, and go to state 109


state 55

  124 jump_statement: RETURN . ';'
  125               | RETURN . expression ';'

    '('             shift, and go to state 44
    IDENTIFIER      shift, and go to state 46
    CONSTANT        shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    SIZEOF          shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    '&'             shift, and go to state 56
    '*'             shift, and go to state 57
    '+'             shift, and go to state 58
    '-'             shift, and go to state 59
    '~'             shift, and go to state 60
    '!'             shift, and go to state 61
    ';'             shift, and go to state 110

    primary_expression         go to state 63
    postfix_expression         go to state 64
    unary_expression           go to state 65
    unary_operator             go to state 66
    cast_expression            go to state 67
    multiplicative_expression  go to state 68
    additive_expression        go to state 69
    shift_expression           go to state 70
    relational_expression      go to state 71
    equality_expression        go to state 72
    and_expression             go to state 73
    exclusive_or_expression    go to state 74
    inclusive_or_expression    go to state 75
    logical_and_expression     go to state 76
    logical_or_expression      go to state 77
    conditional_expression     go to state 78
    assignment_expression      go to state 79
    expression                 go to state 111


state 56

   18 unary_operator: '&' .

    $default  reduce using rule 18 (unary_operator)


state 57

   19 unary_operator: '*' .

    $default  reduce using rule 19 (unary_operator)


state 58

   20 unary_operator: '+' .

    $default  reduce using rule 20 (unary_operator)


state 59

   21 unary_operator: '-' .

    $default  reduce using rule 21 (unary_operator)


state 60

   22 unary_operator: '~' .

    $default  reduce using rule 22 (unary_operator)


state 61

   23 unary_operator: '!' .

    $default  reduce using rule 23 (unary_operator)


state 62

  117 expression_statement: ';' .

    $default  reduce using rule 117 (expression_statement)


state 63

    5 postfix_expression: primary_expression .

    $default  reduce using rule 5 (postfix_expression)


state 64

    6 postfix_expression: postfix_expression . '[' expression ']'
    7                   | postfix_expression . '(' ')'
    8                   | postfix_expression . '(' argument_expression_list ')'
    9                   | postfix_expression . INC_OP
   10                   | postfix_expression . DEC_OP
   13 unary_expression: postfix_expression .

    '('     shift, and go to state 112
    INC_OP  shift, and go to state 113
    DEC_OP  shift, and go to state 114
    '['     shift, and go to state 115

    $default  reduce using rule 13 (unary_expression)


state 65

   24 cast_expression: unary_expression .
   54 assignment_expression: unary_expression . assignment_operator assignment_expression

    '='           shift, and go to state 116
    MUL_ASSIGN    shift, and go to state 117
    DIV_ASSIGN    shift, and go to state 118
    MOD_ASSIGN    shift, and go to state 119
    ADD_ASSIGN    shift, and go to state 120
    SUB_ASSIGN    shift, and go to state 121
    LEFT_ASSIGN   shift, and go to state 122
    RIGHT_ASSIGN  shift, and go to state 123
    AND_ASSIGN    shift, and go to state 124
    XOR_ASSIGN    shift, and go to state 125
    OR_ASSIGN     shift, and go to state 126

    $default  reduce using rule 24 (cast_expression)

    assignment_operator  go to state 127


state 66

   16 unary_expression: unary_operator . cast_expression

    '('             shift, and go to state 44
    IDENTIFIER      shift, and go to state 46
    CONSTANT        shift, and go to state 47
    STRING_LITERAL  shift, and go to state 48
    SIZEOF          shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    '&'             shift, and go to state 56
    '*'             shift, and go to state 57
    '+'             shift, and go to state 58
    '-'             shift, and go to state 59
    '~'             shift, and go to state 60
    '!'             shift, and go to state 61

    primary_expression  go to state 63
    postfix_expression  go to state 64
    unary_expression    go to state 128
    unary_operator      go to state 66
    cast_expression     go to state 129


state 67

   25 multiplicative_expression: cast_expression .

    $default  reduce using rule 25 (multiplicative_expression)


state 68

   26 multiplicative_expression: multiplicative_expression . '*' cast_expression
   27                          | multiplicative_expression . '/' cast_expression
   28                          | multiplicative_expression . '%' cast_expression
   29 additive_expression: multiplicative_expression .

    '*'  shift, and go to state 130
    '/'  shift, and go to state 131
    '%'  shift, and go to state 132

    $default  reduce using rule 29 (additive_expression)


state 69

   30 additive_expression: additive_expression . '+' multiplicative_expression
   31                    | additive_expression . '-' multiplicative_expression
   32 shift_expression: additive_expression .

    '+'  shift, and go to state 133
    '-'  shift, and go to state 134

    $default  reduce using rule 32 (shift_expression)


state 70

   33 relational_expression: shift_expression .

    $default  reduce using rule 33 (relational_expression)


state 71

   34 relational_expression: relational_expression . '<' shift_expression
   35                      | relational_expression . '>' shift_expression
   36                      | relational_expression . LE_OP shift_expression
   37                      | relational_expression . GE_OP shift_expression
   38 equality_expression: relational_expression .

    LE_OP  shift, and go to state 135
    GE_OP  shift, and go to state 136
    '<'    shift, and go to state 137
    '>'    shift, and go to state 138

    $default  reduce using rule 38 (equality_expression)


state 72

   39 equality_expression: equality_expression . EQ_OP relational_expression
   40                    | equality_expression . NE_OP relational_expression
   41 and_expression: equality_expression .

    EQ_OP  shift, and go to state 139
    NE_OP  shift, and go to state 140

    $default  reduce using rule 41 (and_expression)


state 73

   42 and_expression: and_expression . '&' equality_expression
   43 exclusive_or_expression: and_expression .

    '&'  shift, and go to state 141

    $default  reduce using rule 43 (exclusive_or_expression)


state 74

   44 exclusive_or_expression: exclusive_or_expression . '^' and_expression
   45 inclusive_or_expression: exclusive_or_expression .

    '^'  shift, and go to state 142

    $default  reduce using rule 45 (inclusive_or_expression)


state 75
